# Computer_Graphic_Project

./: CMakeLists.txt  OpenGL.sln  README.md
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/Debug/: OpenGL.exe.recipe  application.obj.enc  vc142.idb
OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/Release/: OpenGL.exe.recipe
OpenGL/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog
OpenGL/res/models/axe/: axe_OBJ.mtl
OpenGL/res/models/house/: house_OBJ.mtl
OpenGL/res/models/internet/: character.fbx
OpenGL/res/models/revolver/: revolver_OBJ.mtl
OpenGL/res/models/robot/: robot_OBJ.mtl
OpenGL/res/models/sobata_od_domasnite/: soba.mtl
OpenGL/res/shaders/: blackhole.fs  blinn-phong.fs  blinn-phong.vs  light.vs  phong.fs  phong.vs
OpenGL/src/: Application.cpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Input.h  Joint.cpp  Joint.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Terrain.h  Texture.cpp  Texture.h  Utils.h  Vertex.h  VertexArray.cpp  VertexArray.h
OpenGL/x64/Debug/: vc142.idb
OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
Release/: OpenGL.ipdb
