cmake_minimum_required(VERSION 3.17)
project(OpenGL_master)

set(CMAKE_CXX_STANDARD 14)

include_directories(Dependencies/assimp)
include_directories(Dependencies/assimp/include)
include_directories(Dependencies/assimp/include/assimp)
include_directories(Dependencies/assimp/include/assimp/Compiler)
include_directories(Dependencies/assimp/include/assimp/port)
include_directories(Dependencies/assimp/include/assimp/port/AndroidJNI)
include_directories(Dependencies/fastnoise/include)
include_directories(Dependencies/fastnoise/src)
include_directories(Dependencies/glad/include)
include_directories(Dependencies/glad/include/glad)
include_directories(Dependencies/glad/include/KHR)
include_directories(Dependencies/glfw-3.3.2)
include_directories(Dependencies/glfw-3.3.2/include)
include_directories(Dependencies/glfw-3.3.2/include/GLFW)
include_directories(Dependencies/glm-0.9.9.7/include)
include_directories(Dependencies/glm-0.9.9.7/include/glm)
include_directories(Dependencies/glm-0.9.9.7/include/glm/detail)
include_directories(Dependencies/glm-0.9.9.7/include/glm/ext)
include_directories(Dependencies/glm-0.9.9.7/include/glm/gtc)
include_directories(Dependencies/glm-0.9.9.7/include/glm/gtx)
include_directories(Dependencies/glm-0.9.9.7/include/glm/simd)
include_directories(Dependencies/stb)
include_directories(Dependencies/stb/include)
include_directories(OpenGL/src)

add_executable(OpenGL_master
        Dependencies/assimp/include/assimp/Compiler/poppack1.h
        Dependencies/assimp/include/assimp/Compiler/pstdint.h
        Dependencies/assimp/include/assimp/Compiler/pushpack1.h
        Dependencies/assimp/include/assimp/port/AndroidJNI/AndroidJNIIOSystem.h
        Dependencies/assimp/include/assimp/aabb.h
        Dependencies/assimp/include/assimp/ai_assert.h
        Dependencies/assimp/include/assimp/anim.h
        Dependencies/assimp/include/assimp/BaseImporter.h
        Dependencies/assimp/include/assimp/Bitmap.h
        Dependencies/assimp/include/assimp/BlobIOSystem.h
        Dependencies/assimp/include/assimp/ByteSwapper.h
        Dependencies/assimp/include/assimp/camera.h
        Dependencies/assimp/include/assimp/cexport.h
        Dependencies/assimp/include/assimp/cfileio.h
        Dependencies/assimp/include/assimp/cimport.h
        Dependencies/assimp/include/assimp/color4.h
        Dependencies/assimp/include/assimp/color4.inl
        Dependencies/assimp/include/assimp/config.h
        Dependencies/assimp/include/assimp/CreateAnimMesh.h
        Dependencies/assimp/include/assimp/DefaultIOStream.h
        Dependencies/assimp/include/assimp/DefaultIOSystem.h
        Dependencies/assimp/include/assimp/DefaultLogger.hpp
        Dependencies/assimp/include/assimp/Defines.h
        Dependencies/assimp/include/assimp/defs.h
        Dependencies/assimp/include/assimp/Exceptional.h
        Dependencies/assimp/include/assimp/Exporter.hpp
        Dependencies/assimp/include/assimp/fast_atof.h
        Dependencies/assimp/include/assimp/GenericProperty.h
        Dependencies/assimp/include/assimp/Hash.h
        Dependencies/assimp/include/assimp/Importer.hpp
        Dependencies/assimp/include/assimp/importerdesc.h
        Dependencies/assimp/include/assimp/IOStream.hpp
        Dependencies/assimp/include/assimp/IOStreamBuffer.h
        Dependencies/assimp/include/assimp/IOSystem.hpp
        Dependencies/assimp/include/assimp/irrXMLWrapper.h
        Dependencies/assimp/include/assimp/light.h
        Dependencies/assimp/include/assimp/LineSplitter.h
        Dependencies/assimp/include/assimp/LogAux.h
        Dependencies/assimp/include/assimp/Logger.hpp
        Dependencies/assimp/include/assimp/LogStream.hpp
        Dependencies/assimp/include/assimp/Macros.h
        Dependencies/assimp/include/assimp/material.h
        Dependencies/assimp/include/assimp/material.inl
        Dependencies/assimp/include/assimp/MathFunctions.h
        Dependencies/assimp/include/assimp/matrix3x3.h
        Dependencies/assimp/include/assimp/matrix3x3.inl
        Dependencies/assimp/include/assimp/matrix4x4.h
        Dependencies/assimp/include/assimp/matrix4x4.inl
        Dependencies/assimp/include/assimp/MemoryIOWrapper.h
        Dependencies/assimp/include/assimp/mesh.h
        Dependencies/assimp/include/assimp/metadata.h
        Dependencies/assimp/include/assimp/NullLogger.hpp
        Dependencies/assimp/include/assimp/ParsingUtils.h
        Dependencies/assimp/include/assimp/pbrmaterial.h
        Dependencies/assimp/include/assimp/postprocess.h
        Dependencies/assimp/include/assimp/Profiler.h
        Dependencies/assimp/include/assimp/ProgressHandler.hpp
        Dependencies/assimp/include/assimp/qnan.h
        Dependencies/assimp/include/assimp/quaternion.h
        Dependencies/assimp/include/assimp/quaternion.inl
        Dependencies/assimp/include/assimp/RemoveComments.h
        Dependencies/assimp/include/assimp/scene.h
        Dependencies/assimp/include/assimp/SceneCombiner.h
        Dependencies/assimp/include/assimp/SGSpatialSort.h
        Dependencies/assimp/include/assimp/SkeletonMeshBuilder.h
        Dependencies/assimp/include/assimp/SmoothingGroups.h
        Dependencies/assimp/include/assimp/SmoothingGroups.inl
        Dependencies/assimp/include/assimp/SpatialSort.h
        Dependencies/assimp/include/assimp/StandardShapes.h
        Dependencies/assimp/include/assimp/StreamReader.h
        Dependencies/assimp/include/assimp/StreamWriter.h
        Dependencies/assimp/include/assimp/StringComparison.h
        Dependencies/assimp/include/assimp/StringUtils.h
        Dependencies/assimp/include/assimp/Subdivision.h
        Dependencies/assimp/include/assimp/texture.h
        Dependencies/assimp/include/assimp/TinyFormatter.h
        Dependencies/assimp/include/assimp/types.h
        Dependencies/assimp/include/assimp/vector2.h
        Dependencies/assimp/include/assimp/vector2.inl
        Dependencies/assimp/include/assimp/vector3.h
        Dependencies/assimp/include/assimp/vector3.inl
        Dependencies/assimp/include/assimp/version.h
        Dependencies/assimp/include/assimp/Vertex.h
        Dependencies/assimp/include/assimp/XMLTools.h
        Dependencies/assimp/include/assimp/ZipArchiveIOSystem.h
        Dependencies/fastnoise/include/FastNoiseSIMD.h
        Dependencies/fastnoise/src/FastNoiseSIMD.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_avx2.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_avx512.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_internal.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_internal.h
        Dependencies/fastnoise/src/FastNoiseSIMD_neon.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_sse2.cpp
        Dependencies/fastnoise/src/FastNoiseSIMD_sse41.cpp
        Dependencies/glad/include/glad/glad.h
        Dependencies/glad/include/KHR/khrplatform.h
        Dependencies/glad/src/glad.c
        Dependencies/glfw-3.3.2/include/GLFW/glfw3.h
        Dependencies/glfw-3.3.2/include/GLFW/glfw3native.h
        Dependencies/glm-0.9.9.7/include/glm/detail/_features.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/_fixes.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/_noise.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/_swizzle.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/_swizzle_func.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/_vectorize.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/compute_common.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/compute_vector_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/func_common.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_common_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_exponential.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_exponential_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_geometric.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_geometric_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_integer.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_integer_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_matrix.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_matrix_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_packing.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_packing_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_trigonometric.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_trigonometric_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_vector_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/func_vector_relational_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/glm.cpp
        Dependencies/glm-0.9.9.7/include/glm/detail/qualifier.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/setup.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_float.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_half.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_half.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x2.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x3.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat2x4.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x2.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x3.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat3x4.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x2.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x3.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x4.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_mat4x4_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_quat.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_quat.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_quat_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec1.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec1.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec2.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec2.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec3.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec3.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec4.hpp
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec4.inl
        Dependencies/glm-0.9.9.7/include/glm/detail/type_vec4_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_clip_space.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_clip_space.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_common.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_common.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double2x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double3x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_double4x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float2x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float3x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_float4x4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_projection.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_projection.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_transform.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/matrix_transform.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_common.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_common.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_common_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_double.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_double_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_exponential.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_exponential.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_float.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_float_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_geometric.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_geometric.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_transform.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_transform.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_trigonometric.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/quaternion_trigonometric.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_common.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_common.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_constants.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_constants.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_int_sized.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_integer.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_uint_sized.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_ulp.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/scalar_ulp.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool1.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool1_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_bool4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_common.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_common.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double1.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double1_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_double4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float1.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float1_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_float4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int1.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int1_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_int4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_integer.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint1.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint1_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint2.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint2_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint3.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint3_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint4.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_uint4_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_ulp.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext/vector_ulp.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/bitfield.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/bitfield.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/color_space.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/color_space.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/constants.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/constants.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/epsilon.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/epsilon.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/integer.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_access.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_access.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_inverse.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_inverse.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_transform.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/matrix_transform.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/noise.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/noise.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/packing.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/packing.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/quaternion.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/quaternion.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/quaternion_simd.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/random.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/random.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/reciprocal.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/reciprocal.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/round.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/round.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/type_aligned.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/type_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/type_precision.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/type_ptr.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/type_ptr.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/ulp.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtc/ulp.inl
        Dependencies/glm-0.9.9.7/include/glm/gtc/vec1.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/associated_min_max.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/associated_min_max.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/bit.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/bit.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/closest_point.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/closest_point.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_encoding.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_encoding.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_space.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_space.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_space_YCoCg.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/color_space_YCoCg.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/common.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/common.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/compatibility.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/compatibility.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/component_wise.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/component_wise.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/dual_quaternion.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/dual_quaternion.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/easing.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/easing.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/euler_angles.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/euler_angles.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/extend.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/extend.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/extended_min_max.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/extended_min_max.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/exterior_product.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/exterior_product.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_exponential.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_exponential.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_square_root.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_square_root.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_trigonometry.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/fast_trigonometry.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/float_notmalize.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/functions.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/functions.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/gradient_paint.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/gradient_paint.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/handed_coordinate_space.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/handed_coordinate_space.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/hash.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/hash.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/integer.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/intersect.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/intersect.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/io.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/io.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/log_base.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/log_base.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_cross_product.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_cross_product.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_decompose.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_decompose.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_factorisation.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_factorisation.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_interpolation.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_interpolation.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_major_storage.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_major_storage.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_operation.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_operation.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_query.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_query.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_transform_2d.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/matrix_transform_2d.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/mixed_product.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/mixed_product.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/norm.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/norm.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/normal.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/normal.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/normalize_dot.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/normalize_dot.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/number_precision.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/number_precision.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/optimum_pow.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/optimum_pow.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/orthonormalize.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/orthonormalize.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/perpendicular.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/perpendicular.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/polar_coordinates.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/polar_coordinates.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/projection.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/projection.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/quaternion.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/quaternion.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/range.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/raw_data.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/raw_data.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/rotate_normalized_axis.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/rotate_normalized_axis.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/rotate_vector.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/rotate_vector.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/scalar_multiplication.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/scalar_relational.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/scalar_relational.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/spline.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/spline.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/std_based_type.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/std_based_type.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/string_cast.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/string_cast.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/texture.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/texture.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/transform.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/transform.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/transform2.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/transform2.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/type_aligned.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/type_aligned.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/type_trait.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/type_trait.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/vec_swizzle.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/vector_angle.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/vector_angle.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/vector_query.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/vector_query.inl
        Dependencies/glm-0.9.9.7/include/glm/gtx/wrap.hpp
        Dependencies/glm-0.9.9.7/include/glm/gtx/wrap.inl
        Dependencies/glm-0.9.9.7/include/glm/simd/common.h
        Dependencies/glm-0.9.9.7/include/glm/simd/exponential.h
        Dependencies/glm-0.9.9.7/include/glm/simd/geometric.h
        Dependencies/glm-0.9.9.7/include/glm/simd/integer.h
        Dependencies/glm-0.9.9.7/include/glm/simd/matrix.h
        Dependencies/glm-0.9.9.7/include/glm/simd/neon.h
        Dependencies/glm-0.9.9.7/include/glm/simd/packing.h
        Dependencies/glm-0.9.9.7/include/glm/simd/platform.h
        Dependencies/glm-0.9.9.7/include/glm/simd/trigonometric.h
        Dependencies/glm-0.9.9.7/include/glm/simd/vector_relational.h
        Dependencies/glm-0.9.9.7/include/glm/common.hpp
        Dependencies/glm-0.9.9.7/include/glm/exponential.hpp
        Dependencies/glm-0.9.9.7/include/glm/ext.hpp
        Dependencies/glm-0.9.9.7/include/glm/fwd.hpp
        Dependencies/glm-0.9.9.7/include/glm/geometric.hpp
        Dependencies/glm-0.9.9.7/include/glm/glm.hpp
        Dependencies/glm-0.9.9.7/include/glm/integer.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat2x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat2x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat2x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat3x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat3x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat3x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat4x2.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat4x3.hpp
        Dependencies/glm-0.9.9.7/include/glm/mat4x4.hpp
        Dependencies/glm-0.9.9.7/include/glm/matrix.hpp
        Dependencies/glm-0.9.9.7/include/glm/packing.hpp
        Dependencies/glm-0.9.9.7/include/glm/trigonometric.hpp
        Dependencies/glm-0.9.9.7/include/glm/vec2.hpp
        Dependencies/glm-0.9.9.7/include/glm/vec3.hpp
        Dependencies/glm-0.9.9.7/include/glm/vec4.hpp
        Dependencies/glm-0.9.9.7/include/glm/vector_relational.hpp
        Dependencies/stb/include/stb_image.h
        OpenGL/src/Application.cpp
        OpenGL/src/Buffer.cpp
        OpenGL/src/Buffer.h
        OpenGL/src/Camera.cpp
        OpenGL/src/Camera.h
        OpenGL/src/GameObject.cpp
        OpenGL/src/GameObject.h
        OpenGL/src/Input.h
        OpenGL/src/Joint.cpp
        OpenGL/src/Joint.h
        OpenGL/src/Light.h
        OpenGL/src/Material.h
        OpenGL/src/Mesh.cpp
        OpenGL/src/Mesh.h
        OpenGL/src/Model.cpp
        OpenGL/src/Model.h
        OpenGL/src/Shader.cpp
        OpenGL/src/Shader.h
        OpenGL/src/Terrain.h
        OpenGL/src/Texture.cpp
        OpenGL/src/Texture.h
        OpenGL/src/Utils.h
        OpenGL/src/Vertex.h
        OpenGL/src/VertexArray.cpp
        OpenGL/src/VertexArray.h)
